# simple-wallet

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/metadata/: mod.rs  nagara.rs
