[workspace]
resolver = "2"
members = ["cli", "lib"]

[patch.crates-io]
ss58-registry = { git = "https://github.com/nagara-network/ss58-registry.git", rev = "cc08148" }

[workspace.dependencies]
# local
nagara-simple-wallet = { path = "lib" }
# crates.io
bigdecimal = { version = "0.4.2", features = ["serde"] }
futures = { version = "0.3.29", features = ["io-compat"] }
getrandom = "0.2.10"
hex = { version = "0.4.3", features = ["serde"] }
nagara-identities = { git = "https://github.com/nagara-network/ecosystem-libraries.git", rev = "a625c59", version = "1.0.0-alpha.12" }
nagara-logging = { git = "https://github.com/nagara-network/ecosystem-libraries.git", rev = "a625c59", version = "1.0.0-alpha.12" }
parity-scale-codec = "3.6.5"
safer-ffi = { version = "0.1.4", features = ["log", "proc_macros", "tokio"] }
serde = { version = "1.0.192", features = ["derive"] }
ss58-registry = { git = "https://github.com/nagara-network/ss58-registry.git", rev = "cc08148" }
subxt = { version = "0.32.1", default-features = false, features = ["getrandom", "jsonrpsee"] }
thiserror = "1.0.50"
zsn-logging = { git = "https://github.com/bamboolabs-foundation/zsn-common-lib", version = "0.1.2", features = [
    "std",
] }
