[package]
name = "nagara-simple-wallet"
version = "1.0.0-alpha.12"
edition = "2021"

[features]
default = ["subxt/native"]
wasm32 = ["getrandom/js", "subxt/web"]

[dependencies]
futures.workspace = true
getrandom.workspace = true
hex.workspace = true
nagara-identities.workspace = true
nagara-logging.workspace = true
parity-scale-codec.workspace = true
safer-ffi.workspace = true
serde.workspace = true
subxt.workspace = true
thiserror.workspace = true
